[package]
name = "piston-button_tracker"
version = "0.1.0"
authors = [
    "Sean Hagar <rcix2010@gmail.com>"
]
keywords = ["key", "button", "controller", "mouse", "press"]
description = "A Rust library for tracking key/mouse press events from windows for use in update loops"

[lib]
name = "button_tracker"
path = "src/lib.rs"

[dependencies.pistoncore-input]
version = "*"
