[package]
name = "piston-button_tracker"
version = "0.13.0"
authors = [
    "Sean Hagar <rcix2010@gmail.com>"
]
keywords = ["key", "button", "tracker", "mouse", "piston"]
description = "A Piston library for tracking key/mouse press events from windows for use in update loops"
license = "MIT"
repository = "https://github.com/PistonDevelopers/button_tracker.git"
homepage = "https://github.com/PistonDevelopers/button_tracker"

[lib]
name = "button_tracker"
path = "src/lib.rs"

[dependencies.pistoncore-input]
version = "0.28.0"
